Add "note" role

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                         cheese, vegetables, or meats.
                     </p>
                 </div>
-                <div class="space-y-4 rounded-lg bg-rose-50 p-6">
+                <div class="space-y-4 rounded-lg bg-rose-50 p-6" role="note">
                     <p class="text-xl font-semibold text-rose-800">
                         Preparation time
                     </p>
